--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="hovergallery-flex-column">
                          <div class="hovergallery-hover-text">
                            <img class="hovergallery-img" src="img/countries/Uraguay.svg">
-                           <p>
+                           <p style = "margin-top: 5%;>
                              Uruguay  <br> 3,473,730 people
                            </p>
                          </div>
