--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                        </div>
 
 
-                        <div class="hovergallery-flex-column">
+                        <div class="hovergallery-flex-column"  style = "margin-top: 5%;>
                          <div class="hovergallery-hover-text">
                            <img class="hovergallery-img" src="img/countries/Uraguay.svg">
-                           <p style = "margin-top: 5%;>
+                           <p>
                              Uruguay  <br> 3,473,730 people
                            </p>
                          </div>
