--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                        </div>
 
 
-                        <div class="hovergallery-flex-column"  style = "margin-top: 20%;">
+                        <div class="hovergallery-flex-column"  >
                          <div class="hovergallery-hover-text">
-                           <img class="hovergallery-img" src="img/countries/Uraguay.svg">
+                           <img class="hovergallery-img" src="img/countries/uraguay.svg">
                            <p>
                              Uruguay  <br> 3,473,730 people
                            </p>
