--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     <div class="col-sm-16">
                       <div class="hovergallery-content-main">
                         <div class="hovergallery-flex-container">
+				
                           <div class="hovergallery-flex-column">
                             <div class="hovergallery-hover-text">
                               <img class="hovergallery-img" src="img/countries/argentina.svg" style = "transform: scale(3)">
@@ -126,9 +127,10 @@
                        </div>
 
 
-                        <div class="hovergallery-flex-column"  >
+                        <div class="hovergallery-flex-column">
+				
                          <div class="hovergallery-hover-text">
-                           <img class="hovergallery-img" src="img/countries/uraguay.svg">
+                           <img class="hovergallery-img" src="img/countries/uraguay.svg" style = "transform: scale(3)">
                            <p>
                              Uruguay  <br> 3,473,730 people
                            </p>
