--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <!-- about page section1 -->
         <div class = "chile_box" id="box1">
           <h1 id="section-1" class="section-header"></h1>
-          <h1 align="left" class = "header"> Chile </h1>
+          <h1 align="center" class = "header"> Chile </h1>
           <!-- chile info -->
-          <p align="left" class = "chile_text">
+          <p align="center" class = "chile_text">
             Chile, country situated along the western seaboard of South America. It extends approximately 2,700 miles from its boundary with Peru, at latitude 17°30′ S, to the tip of South America at Cape Horn, latitude 56° S, a point only about 400 miles north of Antarctica. A long, narrow country, it has an average width of only about 110 miles, with a maximum of 217 miles at the latitude of Antofagasta and a minimum of 9.6 miles near Puerto Natales. It is bounded on the north by Peru and Bolivia, on its long eastern border by Argentina, and on the west by the Pacific Ocean. Chile exercises sovereignty  over Easter Island, the Juan Fernández  Archipelago, and the volcanic islets of Sala y Gómez, San Félix, and San Ambrosio, all of which are located in the South Pacific. Chile also claims a 200-mile offshore limit.</p>
           <!-- USA v Chile Map -->
           <h3 class = "us_chile_title">USA v CHILE map</h3>
@@ -84,7 +84,7 @@
         <div class="block-list__item">
           <div class="block-list__item-inner">
             <div class = "chile_box" id="box2">
-              <h2 align="left" class = "header"> Population <sub style = "font-weight: 200; font-size: 12px;">(Hover)</sub></h2>
+              <h2 align="center" class = "header"> Population <sub style = "font-weight: 200; font-size: 12px;">(Hover)</sub></h2>
                 <div class="hovergallery-hover-text " style = "margin-top: 5%; margin-left: 10%; width: 82%; height: 25%;">
                   <img class="hovergallery-img" src="img/countries/chile.svg" style= "transform: scale(2); background-color: rgb(0, 0, 0, .1); margin-top: -.5%;">
                   <p style= "background-color: rgb(0, 0, 0, .2); ">
@@ -94,7 +94,7 @@
 
 
               <h1 id="section-2" class="section-header"></h1>
-                <h2 align="left" style = "padding-left: 5%;">
+                <h2 align="center" style = "padding-left: 5%;">
                     Nearby Country Populations <sub style = "font-weight: 200; font-size: 12px;">(Hover)</sub>
                 </h2>
                   <div class="row">
@@ -178,7 +178,7 @@
 
 <!-- nearby country population -->
 <!-- <h1 id="section-2" class="section-header"></h1>
-  <h1 align="left" class = "title">
+  <h1 align="center" class = "title">
       Nearby Country Populations
   </h1>
     <div class="row">
@@ -239,23 +239,28 @@
          </div>
       </div> -->
 
+
 <!-- population growth -->
   <h1 id="section-2" class="section-header"></h1>
-    <h1 align="left" class = "title">
+    <h1 align="center" class = "title">
       Population Growth
     </h1>
   <img src = "img/population/population_growth.png" class = "pop_growth">
 
+<div class="line"></div>
+
 <!-- population by age -->
   <h1 id="section-3" class="section-header"></h1>
-    <h1 align="left" class = "title" style="padding-top: 15%; padding-left: 5%;">
+    <h1 align="center" class = "title" style="padding-top: 15%; ">
       Population by Age and Gender 2018
     </h1>
   <img src = "img/population/population_age_gender.png" class = "population_age_gender">
 
+<div class="line"></div>
+
 <!-- religious groups -->
   <h1 id="section-4" class="section-header"></h1>
-    <h1 align="left" class = "title" style="padding-top: 15%"> Religious Groups</h1>
+    <h1 align="center" class = "title" style="padding-top: 15%"> Religious Groups</h1>
     <div class = "religion_grid">
       <div class = "catholic">
         <img src = "img/religion/religious_catholic.png" class = "religion">
@@ -278,9 +283,11 @@
       </div>
     </div>
 
+<div class="line"></div>
+
 <!-- ethnic groups -->
   <h1 id="section-5" class="section-header"></h1>
-    <h1 align="left" class = "title" style="padding-top: 15%">
+    <h1 align="center" class = "title" style="padding-top: 15%">
       Ethnic Groups
     </h1>
     <div class = "ethnic_group">
@@ -326,9 +333,11 @@
   </div>
 </section> -->
 
+
+<div class="line"></div>
 <!-- imports&exports -->
 <h1 id="section-7" class="section-header"></h1>
-<h1 align="left" class = "title" style="padding-top: 15%"> Exports & Imports </h1>
+<h1 align="center" class = "title" style="padding-top: 15%"> Exports & Imports </h1>
   <!-- global map -->
   <div class = "global_map" id = "first">
     <img src="img/global_map.png" class = "global" style="background-color:white;">
@@ -383,8 +392,10 @@
     </div>
 	</div>
 
+
+<div class="line"></div>
 <!-- agricultural products -->
-<h1 align="left" class = "title" style="padding-top: 15%">Agricultural Products</h1>
+<h1 align="center" class = "title" style="padding-top: 15%">Agricultural Products</h1>
   <h1 id="section-8" class="section-header"></h1>
   <ul>
     <li><i>
@@ -468,8 +479,10 @@
     </i></li>
   </ul>
 
+
+<div class="line"></div>
 <!-- timeline -->
-<h1 align="left" class = "title" style="padding-top: 15%"> Timeline </h1>
+<h1 align="center" class = "title" style="padding-top: 15%"> Timeline </h1>
   <h1 id="section-9" class="section-header"></h1>
   <div class="time-line">
     <div class="controls" data-direction="-1"></div>
