--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h1 id="section-1" class="section-header"></h1>
           <h1 align="center" class = "header"> Chile </h1>
           <!-- chile info -->
-          <p align="center" class = "chile_text">
+          <p align="left" class = "chile_text">
             Chile, country situated along the western seaboard of South America. It extends approximately 2,700 miles from its boundary with Peru, at latitude 17°30′ S, to the tip of South America at Cape Horn, latitude 56° S, a point only about 400 miles north of Antarctica. A long, narrow country, it has an average width of only about 110 miles, with a maximum of 217 miles at the latitude of Antofagasta and a minimum of 9.6 miles near Puerto Natales. It is bounded on the north by Peru and Bolivia, on its long eastern border by Argentina, and on the west by the Pacific Ocean. Chile exercises sovereignty  over Easter Island, the Juan Fernández  Archipelago, and the volcanic islets of Sala y Gómez, San Félix, and San Ambrosio, all of which are located in the South Pacific. Chile also claims a 200-mile offshore limit.</p>
           <!-- USA v Chile Map -->
           <h3 class = "us_chile_title">USA v CHILE map</h3>
