--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
 <!-- table of contents -->
   <div class = "tableofcontents_head">
     <div class = "tableofcontents"><a class="link-to-section" href="#section-1">About Chile</a></div>
-    <div class = "tableofcontents"><a class="link-to-section" href="#section-2">Population Growth</a></div>
-    <div class = "tableofcontents"><a class="link-to-section" href="#section-3">Population by Age and Gender 2018</a></div>
-    <div class = "tableofcontents"><a class="link-to-section" href="#section-4">Religious Groups</a></div>
-    <div class = "tableofcontents"><a class="link-to-section" href="#section-5">Ethnic Groups</a></div>
+    <div class = "tableofcontents"><a class="link-to-section" href="#section-3">Population Growth</a></div>
+    <div class = "tableofcontents"><a class="link-to-section" href="#section-4">Population by Age and Gender 2018</a></div>
+    <div class = "tableofcontents"><a class="link-to-section" href="#section-5">Religious Groups</a></div>
+    <div class = "tableofcontents"><a class="link-to-section" href="#section-6">Ethnic Groups</a></div>
     <!-- <div class = "tableofcontents"><a class="link-to-section" href="#section-6">Timeline</a></div> -->
     <div class = "tableofcontents"><a class="link-to-section" href="#section-7">Export & Imports</a></div>
     <div class = "tableofcontents"><a class="link-to-section" href="#section-8">Agricultural Products</a></div>
     <div class = "tableofcontents"><a class="link-to-section" href="#section-9">Timeline</a></div>
+    <div class = "tableofcontents"><a class="link-to-section" href="#section-10">Top 10 Places to Visit</a></div>
   </div>
 <!-- down animation -->
   <div class="c-scrolldown">
@@ -175,6 +176,7 @@
 </div>
 
 
+<h1 id="section-2" class="section-header" ></h1>
 
 <div class = "white_break">
 
@@ -243,16 +245,18 @@
 
 <div class="line" style = "background-color: white; padding-top: 10%; margin-top: 0%; margin-bottom: 10%;"></div>
 <!-- population growth -->
-  <h1 id="section-2" class="section-header"></h1>
+  <h1 id="section-3" class="section-header"></h1>
     <h1 align="center" class = "title">
       Population Growth
     </h1>
+
   <img src = "img/population/population_growth.png" class = "pop_growth">
 
 <div class="line"></div>
 
 <!-- population by age -->
-  <h1 id="section-3" class="section-header"></h1>
+
+  <h1 id="section-4" class="section-header"></h1>
     <h1 align="center" class = "title" style="padding-top: 15%; ">
       Population by Age and Gender 2018
     </h1>
@@ -487,7 +491,7 @@
 
 
 <!-- ethnic groups -->
-  <h1 id="section-5" class="section-header"></h1>
+
     <!-- <h1 align="center" class = "title1 ethnic_group_title" style=" float: left">
       Ethnic Groups
     </h1> -->
@@ -516,6 +520,7 @@
             <img src="img/Global.png" class = "exports" >
           </div> -->
 <div class="container2">
+  <h1 id="section-6" class="section-header"></h1>
   <h1 align="center" class = "title1 ethnic_group_title" style=" float: left; margin-top: -3%;">
     Ethnic Groups
   </h1>
@@ -1333,6 +1338,7 @@
 
 <div class = "white_break">
 
+<h1 id="section-10" class="section-header"></h1>
   <div class="line" style = "margin-top: -3%; padding-top: 15%;background-color: white;"></div>
 
   <!-- population by age -->
