--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
     <div id="div1" class="targetDiv" style="display:none">
       <div class="alert alert-success" role="alert">
-        <div style="position: absolute;  background: rgba(0,0,0,0.6); color: #fff; border-radius: 6px; margin-top: -50%; margin-left: 38%; padding: 5%;cursor: pointer;text-align: center; z-index: 9999;"><h4>Click Anywhere to Clear</h4></div>
+        <div style="position: absolute;  background: rgba(0,0,0,0.6); color: #fff; border-radius: 6px; margin-top: -50%; margin-left: 38%; padding: 5%; text-align: center; z-index: 9999;"><h4>Click Anywhere to Clear</h4></div>
       </div>
 
     <img src="img/exports.png" class = "exports" >
